plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'io.github.bmd007.kale_kaj_freenov'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'com.pi4j:pi4j-core:2.7.0'
    implementation 'com.pi4j:pi4j-plugin-raspberrypi:2.7.0'
    implementation 'com.pi4j:pi4j-plugin-gpiod:2.7.0'
    implementation 'com.pi4j:pi4j-plugin-linuxfs:2.7.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
